@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<tree string="Endorsement Sub-state">
+    <field name="name"/>
+    <field name="state"/>
+</tree>
